fix collapse on firefox

--- a/app/styles/_application.scss
+++ b/app/styles/_application.scss
@@ -12,7 +12,7 @@
 
 .guide-sidebar {
   height: 100vh;
-  width: 220px;
+  max-width: 220px;
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
   > .liquid-child {
     height: 100%;
